# gopenvpn

./: Makefile.am  README  configure.ac
debian/: control  gopenvpn.substvars
pixmaps/: Makefile.am
po/: POTFILES.in  cs.po
polkit/: net.openvpn.gui.gopenvpn.policy
src/: Makefile.am  gopenvpn.c  gopenvpn.h
ui/: Makefile.am  auth_dialog.ui  details_dialog.ui  passphrase_dialog.ui
